# django-breeze

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml  publish_package.yml
django_breeze/: __init__.py  __main__.py  apps.py  main.py  middleware.py  settings.py  urls.py  views.py
django_breeze/core/handlers/: files.py
django_breeze/core/management/: __init__.py
django_breeze/core/management/commands/: _remove-app.py  create-app.py  startapp.py  startproject.py
django_breeze/scripts/: django-breeze.py
django_breeze/stubs/: configs.yml  copier.yml  {{_copier_conf.answers_file}}.sub
django_breeze/stubs/src/components/: react.stub  svelte.stub  vue.stub
django_breeze/stubs/src/main/: react.stub  svelte.stub  vue.stub
django_breeze/stubs/src/pages/: react.stub  svelte.stub  vue.stub
django_breeze/stubs/template/: package.json.stub  tailwind.config.js.stub  vite.config.js.stub  vite.config.{{main_ext}}.stub
django_breeze/stubs/template/{{frontend_path}}/: index.html  index.html.stub  main.jsx  main.{{main_ext}}.stub
django_breeze/stubs/template/{{frontend_path}}/Layout/: SiteLayout.jsx
django_breeze/stubs/template/{{frontend_path}}/pages/: index.jsx  (+1 more)
django_breeze/templates/react/: package.json  tailwind.config.js  vite.config.js
django_breeze/templates/react_typescript/: .gitignore  package.json  vite.config.ts
django_breeze/templates/react_typescript/src/: index.html  main.tsx
django_breeze/templates/svelte4/: package.json  tailwind.config.js  vite.config.js
django_breeze/templates/svelte4/src/: index.html
django_breeze/templates/svelte4_typescript/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
django_breeze/templates/svelte4_typescript/src/: index.html  main.ts
django_breeze/templates/vue3/: package.json  tailwind.config.js  vite.config.js
django_breeze/templates/vue3/src/: index.html  main.jsx
django_breeze/templates/vue3_typescript/: package.json  vite.config.ts
django_breeze/templates/vue3_typescript/src/: index.html
django_breeze/templatetags/: django_vite.py
tests/: README.md
(+9 files in other folders)
