[tool.poetry]
name = "django-breeze"
version = "1.1.0"
description = "Django Breeze provides a minimal and simple starting point for building a Django application with Inertia and Vite with minimal or no configuration. Styled with Tailwind CSS."
keywords = ["react", "django", "vue", "inertia", "vite"]
authors = ["louxsdon <louisayivi.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Louxsdon/django-breeze"
packages = [{ include = "django_breeze" }]

[tool.poetry.dependencies]
python = "^3.10"
django-vite = "3.0.5"
inertia-django = "0.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[tool.poetry.scripts]
django-breeze = 'django_breeze.scripts.django_breeze:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
